--- a/Aplikacja/Angular/oto-auto/src/components/main-search-engine/main-search-engine.component.css
+++ b/Aplikacja/Angular/oto-auto/src/components/main-search-engine/main-search-engine.component.css
@@ -1,5 +1,5 @@
 .container {
-    margin-top: 1px;
+    margin-top: 1px;    
     width: 100%;
     height: 50vh;
     background-image: url(../../assets/banner.jpg);
@@ -10,8 +10,13 @@
 }
 
 .content {
+    width: 100%;
+    margin: 0;
+}
+
+.form-content {
     width: 600px;
-    height: 42vh;
+    height: 45vh;
     margin-left: 7vw;
     margin-top: 3vh;
     box-shadow: 0px 1px 3px var(--secondary-800);
@@ -19,6 +24,7 @@
 }
 
 :host ::ng-deep .p-tabview .p-tabview-panels {
+    height: 200px;
     flex-grow: 1 !important;
     background-color: var(--secondary-100);
 }
@@ -58,4 +64,11 @@
     margin: 0;
     width: 7vw;
     height: 5vh;
+}
+
+.offers {
+    width: 70%;
+    height: calc(inherit - 50vh);
+    background-color: aqua;
+    justify-self: center;
 }
